# opencode-kanban

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  codecov.yml  dist-workspace.toml  package.json
.github/workflows/: ci.yaml  publish-aur.yaml  publish-npm.yaml  release.yml  stale.yaml
.sisyphus/plans/: opencode-kanban.md
aur/: PKGBUILD
config/: keybindings.toml
docs/: DESIGN_KNOWLEDGE.md  ENGINEERING_KNOWLEDGE.md  FUNCTIONALITY.md  REWRITE_SPEC.md  ratatui-widget-swap-audit.md  releasing.md
docs/plans/: 2026-02-19-cli-integration-plan.md
migrations/: 001_create_repos.sql  002_create_categories.sql  003_create_tasks.sql  004_create_command_frequency.sql  005_seed_default_categories.sql
npm/: package.json
npm/scripts/: build_npm_package.py
src/: app.rs  command_palette.rs  input.rs  keybindings.rs  lib.rs  logging.rs  main.rs  matching.rs  projects.rs  realm.rs  settings.rs  task_palette.rs  theme.rs  types.rs  ui.rs
src/app/: actions.rs  core.rs  dialogs.rs  interaction.rs  log.rs  messages.rs  mod.rs  navigation.rs  polling.rs  runtime.rs  side_panel.rs  state.rs  update.rs
src/app/input/: key.rs  mod.rs  mouse.rs
src/app/workflows/: attach.rs  create_task.rs  errors.rs  mod.rs  recovery.rs
src/cli/: mod.rs
src/db/: mod.rs
src/git/: mod.rs
src/keybindings/: dispatcher.rs  loader.rs  mod.rs  schema.rs
src/notification/: mod.rs  sound.rs
src/opencode/: mod.rs  server.rs  session_graph.rs  status_server.rs
src/tmux/: mod.rs
src/ui_realm/: application.rs  messages.rs  mod.rs  model.rs
src/ui_realm/components/: command_palette.rs  context_menu.rs  dialog_shell.rs  footer.rs  kanban_column.rs  mod.rs  project_list.rs  side_panel.rs  task_card.rs
src/ui_realm/components/dialogs/: category_input.rs  confirm_quit.rs  delete_category.rs  delete_task.rs  error_dialog.rs  help.rs  mod.rs  new_project.rs  new_task.rs
src/ui_realm/tests/: harness.rs  helpers.rs  mod.rs
tests/: integration.rs  widget_parity.rs
